--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,6 @@
-JDBC_DRIVER = path to driver
+JDBC_DRIVER = path to Driver
 DATABASE_URL = path to db
+DB = dbName
+SCHEMA = ?currentSchema=dbSchema
 USER = login
 PASSWORD = password
